--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,16 +10,73 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  display: flex;
 }
-#menu{
-  background-color: gray;
-  width: 230px;
-  padding: 25px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
+#menu {
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 20%; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
   left: 0;
+  background-color: gray; /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   overflow-y: scroll;
+}
+#newsDetails{
+  padding: 50px 20px;
+}
+#main {
+  margin-left: 20%;
+  padding:0;
+  width: 80%;
+  background: #ffffff;
+}
+#newsDec{
+  padding: 10px 50px;
+  margin-top: 45px;
+}
+#comment{
+  background-color: white;
+  height: 30px;
+  width: 100%W;
+}
+#comments{
+  background-color: #ffffff;
+  margin-top: 15px;
+  margin-left: 5px;
+}
+.comments-item{
+  background-color: aqua;
+  width: 33%;
+}
+#commentsContainr{
+  padding: 10px;
+  background-color: rgb(136, 136, 136);
+  width: 100%;
+  overflow-y: scroll;
+  display: none;
+  flex-direction: column;
+  height: 150px;
+}
+#commentsContainr form{
+  display: flex;
+  align-items: center;
+}
+#commentsContainr form button{
+  border: none;
+  width: 150px;
+  height: 35px;
+}
+#commentsContainr form * {
+  width: 250px;
+  height: 30px;
+  margin-left: 5px;
+  margin-top: 5px;
 }
 #input-fliter{
   width: 209px;
@@ -34,6 +91,7 @@ body {
   padding: 8px;
   border-radius: 6px;
   height: 120px;
+  width: 80%;
 }
 .menu-item p {
   margin-top: 5px;
@@ -56,7 +114,7 @@ textarea {
   height: 100px;
   background: gray;
 }
-#newsCreateor{
+#newsCreator{
   width: 100px;
   height: 30px;
   border-radius: 5px;
