--- a/src/css/style.css
+++ b/src/css/style.css
@@ -114,7 +114,7 @@ textarea {
   height: 100px;
   background: gray;
 }
-#newsCreator{
+#newsCreatorBtn{
   width: 100px;
   height: 30px;
   border-radius: 5px;
