--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,6 +53,7 @@ body {
   position: absolute;
   left: 90px;
   background: #eee;
+  overflow: auto;
 }
 #newsDec {
   padding: 0 0;
@@ -76,7 +77,9 @@ body {
   padding: 15px;
   display: inline-block;
   margin-right: 5px;
-  margin-top: 5px;
+  margin-top: 0;
+  overflow-x: hidden;
+
 }
 .comments-item *{
   font-family: "vasir";
